@@ -9,6 +9,9 @@ Version 7.0.1
     not change blocking mode to non-blocking anymore. It keeps
     the previous mode.
   - random.cpp: removed deprecated keyword "register" (C++17)
+  - AssocArray::getPrevious returns "false" as expected and does not throw
+    OutOfBoundException anymore, when end of AssocArray is reached
+  - Increased test coverage for AssocArray
 
 Version 7.0.0 vom 29.07.2018 (Repo-Tag: REL_7_0_0)
   - Complete Rewrite, based on Version 6.4.7
